--- a/app/front-end/src/app/pages/search/filters/filter-naics.component.html
+++ b/app/front-end/src/app/pages/search/filters/filter-naics.component.html
@@ -3,7 +3,8 @@
 </button>
 <div id="{{id}}" class="usa-accordion-content" [attr.aria-hidden]="!opened">
   <div class="usa-search form-horizontal">
-    <select id="select_naic" [disabled]="!items" [(ngModel)]="naic" class="items-input">
+    <span *ngIf="items_filtered.length===0">There are <strong>no NAICs</strong> for the selected vehicle(s).</span>
+    <select id="select_naic" [disabled]="items_filtered.length===0" [(ngModel)]="naic" class="items-input">
       <option value="0" selected="selected">Select NAIC --</option>
       <option *ngFor="let item of items_filtered" value="{{item.code}}">{{item.code + ' - ' +
         item.description}}</option>
@@ -12,6 +13,7 @@
       <span class="usa-sr-only">Add NAIC to list</span>
     </button>
   </div>
+
   <ul *ngIf="items_selected" class="items-selected">
     <li *ngFor="let naic of items_selected">
       <a (click)="removeItem(naic.value)" title="Remove {{naic.value}}"><span class="usa-sr-only">Remove {{naic.value}}</span></a>{{naic.value
