Fixed minor bug in Naics Filter Set initial vendor details results

--- a/app/front-end/src/app/app.component.html
+++ b/app/front-end/src/app/app.component.html
@@ -61,7 +61,7 @@
             </button>
           </li>
           <li>
-            <button class="usa-nav-link" [routerLink]="['/search']" routerLinkActive="usa-current">
+            <button class="usa-nav-link" [routerLink]="['/search']" queryParamsHandling="preserve" routerLinkActive="usa-current">
               <span>Advanced Search</span>
             </button>
           </li>
