--- a/app/discovery/templates/index.html
+++ b/app/discovery/templates/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="{% static 'frontend/assets/uswds/css/uswds.min.css' %}">
     </head>
     <body>
-        <app-root>Loading...</app-root>
+        <discovery-root>Loading...</discovery-root>
         
         <script type="text/javascript">
             var API_HOST = "{{API_HOST}}";
