Adding some script type attributes in the index Django template.

--- a/app/discovery/templates/index.html
+++ b/app/discovery/templates/index.html
@@ -20,8 +20,8 @@
             }
         </script>
 
-        <script src="{% static 'frontend/assets/uswds/js/uswds.min.js' %}"></script>
-        <script src="{% static 'frontend/assets/js/autocomplete.js' %}"></script>
+        <script type="text/javascript" src="{% static 'frontend/assets/uswds/js/uswds.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'frontend/assets/js/autocomplete.js' %}"></script>
         
         <script type="text/javascript" src="{% static 'frontend/vendor.js' %}"></script>
         <script type="text/javascript" src="{% static 'frontend/runtime.js' %}"></script> 
