--- a/app/frontend/src/app/pages/search/vendor-detail.component.html
+++ b/app/frontend/src/app/pages/search/vendor-detail.component.html
@@ -1,7 +1,7 @@
 <!-- Spinner -->
 <div id="search-spinner" class="overlay" *ngIf="spinner">
   <div class="spinner-container text-center">
-    <img src="/assets/images/loader.gif" alt="Loading data..." />
+    <img src="/frontend/assets/images/loader.gif" alt="Loading data..." />
     <h2>Loading</h2>
   </div>
 </div>
