Update overall spinner into a component Added getContracts to api service Integrated contract history list

--- a/app/front-end/src/app/pages/search/search.component.html
+++ b/app/front-end/src/app/pages/search/search.component.html
@@ -1,10 +1,5 @@
 <!-- Spinner -->
-<div id="search-spinner" class="overlay" *ngIf="spinner">
-  <div class="spinner-container text-center">
-    <img src="/assets/images/loader.gif" alt="Loading data..." />
-    <h2>Loading</h2>
-  </div>
-</div>
+<discovery-search-spinner [show]="spinner"></discovery-search-spinner>
 <!-- End Spinner -->
 <div class="usa-grid col-container pad-top-bottom">
   <div>
