--- a/app/front-end/src/app/pages/search/vendor-detail.component.html
+++ b/app/front-end/src/app/pages/search/vendor-detail.component.html
@@ -1,10 +1,5 @@
 <!-- Spinner -->
-<div id="search-spinner" class="overlay" *ngIf="spinner">
-  <div class="spinner-container text-center">
-    <img src="/assets/images/loader.gif" alt="Loading data..." />
-    <h2>Loading</h2>
-  </div>
-</div>
+<discovery-search-spinner [show]="spinner"></discovery-search-spinner>
 <!-- End Spinner -->
 <div class="well">
   <div class="usa-grid col-container pad-top-bottom">
@@ -29,16 +24,18 @@
           <div class="usa-width-one-third">
             <h6 class="usa-heading-alt">Annual Revenue:</h6>
             <blockquote><strong>{{vendor?.annual_revenue | currency}}</strong></blockquote>
-            <h6 class="usa-heading-alt">Address:</h6>
-            <blockquote>
-              <strong>{{vendor.sam_location.address}}</strong><br>
-              <strong>{{vendor.sam_location.city}}</strong><br>
-              <strong>{{vendor.sam_location.state}} {{vendor.sam_location.zipcode}}</strong>
-            </blockquote>
+            <div *ngIf="vendor.sam_location.address">
+              <h6 class="usa-heading-alt">Address:</h6>
+              <blockquote>
+                <strong>{{vendor.sam_location.address}}</strong><br>
+                <strong>{{vendor.sam_location.city}}</strong><br>
+                <strong>{{vendor.sam_location.state}} {{vendor.sam_location.zipcode}}</strong>
+              </blockquote>
+            </div>
           </div>
 
         </div>
-        <div class="usa-grid">
+        <div class="usa-grid" *ngIf="vendor.sam_url">
           <div class="usa-width-one-whole">
             <h6 class="usa-heading-alt">Vendor website:</h6>
             <blockquote><a href="//{{vendor?.sam_url}}" target="_blank">{{vendor?.sam_url}}</a></blockquote>
@@ -50,7 +47,7 @@
             <div class="overflow">
               <a (click)="toggleSBD()" class="btn-toggle pull-right">{{!sbd_col ? 'Show' : 'Hide'}} Set Asides</a>
 
-              <table class="usa-table-borderless">
+              <table class="usa-table-borderless" [hidden]="true">
                 <caption>Choose one or more to show only contract history for that selection</caption>
                 <thead>
                   <tr>
@@ -94,34 +91,8 @@
               </table>
             </div>
 
-            <table class="usa-table-borderless">
-              <caption>Showing vendor's indexed 5 year contract history</caption>
-              <thead>
-                <tr>
-                  <th scope="col">Date Signed</th>
-                  <th scope="col">PIID</th>
-                  <th scope="col">Agency</th>
-                  <th scope="col">Type</th>
-                  <th scope="col">Point of Contact</th>
-                  <th scope="col">Value ($)</th>
-                  <th scope="col">Status</th>
-                  <th scope="col">Codes</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row"></th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-
-              </tbody>
-            </table>
+            <!-- Contract History -->
+            <discovery-tbl-contract-history [duns]="duns"></discovery-tbl-contract-history>
           </div>
         </div>
 
