--- a/app/front-end/src/styles.css
+++ b/app/front-end/src/styles.css
@@ -342,32 +342,6 @@ ul.items-selected li a {
 .usa-search button {
   float: left;
 }
-.overlay {
-  background-color: rgba(244, 247, 249, 0.8);
-  position: absolute;
-  top: 0;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  z-index: 9900;
-}
-.overlay.show {
-  left: 0px;
-  width: 100%;
-  height: 100%;
-}
-#search-spinner div.spinner-container {
-  margin: auto;
-  position: absolute;
-  top: 250px;
-  left: 45%;
-}
-#search-spinner div.spinner-container h2 {
-  font-family: 'Source Sans Pro', 'Helvetica Neue', 'Helvetica', 'Roboto', Arial,
-    sans-serif;
-  padding: 10px;
-  margin: 0px !important;
-}
 .spinner img {
   width: 30px;
   height: 30px;
@@ -402,6 +376,7 @@ h3 {
   font-weight: 400;
   padding: 0px 15px 10px 15px !important;
 }
+h2.alt,
 h3,
 caption {
   font-family: 'Source Sans Pro', 'Helvetica Neue', 'Helvetica', 'Roboto', Arial,
